# desktop

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  index.html  package.json  pnpm-lock.yaml
.github/workflows/: semver.yml
assets/: icon.rgba
dist-electron/: main.js  preload.js
electron/: main.ts  preload.ts
src/: App.tsx  index.css  main.rs  main.tsx
